# blogrobot

./: .gitignore  PKG-INFO  autoinitblog.spec  readme.md  requirements.txt  setup.cfg
blogrobot/: initconfig.yaml
blogrobot/cnblogs/: bloginfo.py  cnblogselenium.py  login.py
blogrobot/login/: __init__.py  login.py  seleniumverify.py
blogrobot/utils/: __init__.py  httputils.py  log.py  readconfig.py  seleniumutils.py
